Small fix and reorganzation
Footer overlapping fixed and legacy folder created with no-longer-in-use files

--- a/Project1/css/lostPersonAdd.css
+++ b/Project1/css/lostPersonAdd.css
@@ -1,3 +1,7 @@
+footer {
+  float: bottom;
+}
+
 main {
     width: 79%;
     display: flex;
@@ -34,7 +38,7 @@ main {
 }
 
 #textdata{
-
+  width: 39%;
   border-style: dashed;
   border-width: thick;
   float: right;
